<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/jiopermissions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/adddevice_heading_height"
    android:background="@color/colordialogbackground"
    app:ignore="NamespaceTypo">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colordialogbackground"
        android:id="@+id/jiopermissions_appheader"
        android:gravity="center">

        <TextView
            android:id="@+id/jiopermissions_app_header_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/adddevice_heading_height"
            android:text="@string/jiopermissions_app_header_str"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/adddevice_heading_font_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jiopermissions_header"
        android:layout_below="@id/jiopermissions_appheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adddevice_heading_height"
        android:layout_marginRight="@dimen/adddevice_heading_height"
        android:paddingBottom="@dimen/twenty_dp"
        android:background="@drawable/asset_dialog_round_bkgd">

        <TextView
            android:id="@+id/jiopermissions_before_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/jiopermissions_before_activate_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/adddevice_heading_font_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_bt"
            android:layout_below="@+id/jiopermissions_before_activate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/permissions_content_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_bt_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_bt_details"
            android:layout_below="@+id/jiopermissions_turnon_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_bt_details_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_bt_details_enable"
            android:layout_below="@+id/jiopermissions_turnon_bt_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_bt_details_enable_text"
            android:textColor="@color/colordialogbackground"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_location"
            android:layout_below="@+id/jiopermissions_turnon_bt_details_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_location_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_location_details"
            android:layout_below="@+id/jiopermissions_turnon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_location_details_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_location_details_enable"
            android:layout_below="@+id/jiopermissions_turnon_location_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_location_details_enable_text"
            android:textColor="@color/colordialogbackground"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/jiopermissions_turnon_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jiopermissions_turnon_location_details_enable"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_network"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/jiopermissions_turnon_network_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jiopermissions_turnon_network"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/jiopermissions_turnon_network_details"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/server_detail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/jiopermissions_turnon_network_details"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/server_detail"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/server_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_below="@id/jiopermissions_turnon_network_details"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/error_detail_logs"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/server_spinner"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/display_error_logs"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/error_detail_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_below="@id/server_spinner"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/fetchTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/error_detail_logs"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/request_interval"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/fetch_time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_below="@id/error_detail_spinner"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/numberMarkerTextview"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/fetchTimeTextView"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/marker_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/numberMarkerEdittext"
            android:layout_width="@dimen/margin_100dp"
            android:layout_height="40dp"
            android:layout_below="@id/fetch_time_spinner"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:inputType="number"
            android:layout_marginRight="@dimen/twenty_dp"
            android:background="@drawable/stroke_box" />

        <TextView
            android:id="@+id/enableAutomaticSubmitAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/numberMarkerTextview"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/enable_automatic_submit_api"
            android:textColor="@android:color/black"
            android:textSize="@dimen/seventeen_sp"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/enable_disable_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_below="@id/numberMarkerEdittext"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/jiopermissions_next"
            android:layout_width="@dimen/adddevice_button_width"
            android:layout_height="@dimen/adddevice_button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_30"
            android:background="@drawable/button_frame_blue"
            android:text="@string/jiopermissions_next_text"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/seventeen_sp" />
    </RelativeLayout>
</RelativeLayout>