<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dull_text_color">

    <include
        android:id="@+id/editToolbar"
        layout="@layout/toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dull_text_color"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@+id/editToolbar">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="@id/main_layout"
            app:layout_constraintLeft_toLeftOf="@id/main_layout"
            app:layout_constraintRight_toRightOf="@id/main_layout"
            app:layout_constraintTop_toTopOf="@+id/main_layout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/backgroundLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="@dimen/twenty_dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/app_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/jio_locaiton" />

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/app_icon"
                        app:layout_constraintTop_toTopOf="@+id/app_icon"
                        android:text="@string/app_name"
                        android:textColor="@color/alert_text_color"
                        android:textSize="@dimen/twenty_dp"
                        android:textStyle="bold"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/app_name"
                        app:layout_constraintLeft_toRightOf="@id/app_icon"
                        android:layout_below="@+id/app_name"
                        android:text="Version : v2.6"
                        android:textColor="@color/alert_text_color"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/aboutAppText"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        app:layout_constraintTop_toBottomOf="@+id/app_version"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="33dp"
                        android:layout_marginEnd="33dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/about_app_content"
                        android:textColor="@color/alert_text_color"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/next_btn"
                        android:layout_width="232dp"
                        android:layout_height="36dp"
                        android:text="@string/okay"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/white"
                        android:layout_marginBottom="60dp"
                        android:background="@drawable/login_selector" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>